# telegram-data-collection

./: .env.sample  .gitignore  .pylintrc  0_download_dialogs.py  0_download_dialogs_list.py  0_download_dialogs_meta_data.py  1_dialog_data_manager.py  1_download_chat.py  1_download_dialogs_data.py  2_prepare_dialogs_data.py  CONTRIBUTING.md  Makefile  README.md  Untitled.ipynb  csv_test.py  dialogs_list.py  download_chat.py  download_dialogs.py  download_dialogs_data.py  download_dialogs_list.py  messages_per_hours.ipynb  pyproject.toml  requirements.in  requirements.txt  session name.session  telegram_client.ipynb  tg_client.py  tmp.session  utils.py
.github/workflows/: ci.yml
config/: config_example.json
telegram_data_downloader/: __init__.py  factory.py  settings.py  utils.py
telegram_data_downloader/dict_types/: dialog.py  message.py
telegram_data_downloader/loader/: csv.py  json.py  test_csv.py  test_json.py
telegram_data_downloader/processor/: dialog_downloader.py  downloader.py  message_downloader.py
telegram_data_downloader/tests/: test_factory.py  test_loader_csv.py  test_loader_json.py  test_processor_dialog_downloader.py  test_processor_message_downloader.py  test_utils.py
utils/: __init__.py  config.py  utils.py
